[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/overlays/quest_overlay.gd" id="1_quest_script"]

[node name="QuestOverlay" type="CanvasLayer"]
layer = 6
script = ExtResource("1_quest_script")

[node name="Dimmer" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.45)

[node name="Root" type="CenterContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Root"]
unique_name_in_owner = true
custom_minimum_size = Vector2(520, 360)

[node name="Margin" type="MarginContainer" parent="Root/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Root/Panel/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Root/Panel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quests"

[node name="Scroll" type="ScrollContainer" parent="Root/Panel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="QuestList" type="RichTextLabel" parent="Root/Panel/Margin/VBox/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
autowrap_mode = 1
fit_content = true

[node name="Buttons" type="HBoxContainer" parent="Root/Panel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Root/Panel/Margin/VBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Close"
